# bloodhound

./: .envrc  .gitignore  .hlint.yaml  .travis.yml  DSL.org  LICENSE  Makefile  README.md  README.org  Setup.hs  Test.hs  bloodhound.cabal  bloodhound5.cabal  cabal.project  changelog  changelog.md  docker-compose.yml  flake.nix  gen-docs.sh  hie.yaml  package.yaml  report.xml  shell.nix  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml  stack-9.0.yaml  stack-9.2.yaml  stack.yaml  upload-docs.sh
.github/: haskell-ci.patch
.github/workflows/: compat.yml  haskell-ci.yml  haskell.yml  nix.yml  ormolu.yml  tests.yml
Database/: Bloodhound.hs
Database/Bloodhound/: Client.hs  Types.hs
Database/Bloodhound/Types/: Class.hs  Instances.hs
elasticsearch/: Dockerfile
examples/: LICENSE  Makefile  README.md  Tweet.hs  bloodhound-examples.cabal  package.yaml  stack.yaml
src/Bloodhound/: Import.hs
src/Database/: Bloodhound.hs
src/Database/Bloodhound/: Client.hs  Requests.hs  Types.hs
src/Database/Bloodhound/Client/: Cluster.hs
src/Database/Bloodhound/Common/: Client.hs  Requests.hs  Script.hs  Types.hs
src/Database/Bloodhound/Dynamic/: Client.hs
src/Database/Bloodhound/ElasticSearch7/: Client.hs  Requests.hs  Types.hs
src/Database/Bloodhound/Internal/: Aggregation.hs  Analysis.hs  Client.hs  Count.hs  Highlight.hs  Newtypes.hs  PointInTime.hs  Query.hs  Reindex.hs  Sort.hs  StringlyTyped.hs  Suggest.hs  Task.hs
src/Database/Bloodhound/Internal/Client/: BHRequest.hs  Doc.hs
src/Database/Bloodhound/Internal/Utils/: Imports.hs  Requests.hs  StringlyTyped.hs
src/Database/Bloodhound/Internal/Versions/Common/Types/: Aggregation.hs  Analysis.hs  Bulk.hs  Count.hs  Highlight.hs  Indices.hs  Newtypes.hs  Nodes.hs  PointInTime.hs  Query.hs  Reindex.hs  Script.hs  Search.hs  Snapshots.hs  Sort.hs  Suggest.hs  Task.hs  Units.hs
src/Database/Bloodhound/Internal/Versions/Common/Types/Query/: CommonTerms.hs  Commons.hs  Fuzzy.hs  Match.hs  MoreLikeThis.hs  MoreLikeThisField.hs  Prefix.hs  QueryString.hs  Range.hs  Regexp.hs  SimpleQueryString.hs  Wildcard.hs
src/Database/Bloodhound/Internal/Versions/ElasticSearch7/Types/: PointInTime.hs
src/Database/Bloodhound/Internal/Versions/OpenSearch2/Types/: PointInTime.hs
src/Database/Bloodhound/OpenSearch1/: Client.hs  Requests.hs  Types.hs
src/Database/Bloodhound/OpenSearch2/: Client.hs  Requests.hs  Types.hs
src/Database/Bloodhound/Types/: Class.hs  Internal.hs
src/Database/V1/: Bloodhound.hs
src/Database/V1/Bloodhound/: Client.hs  Types.hs
src/Database/V1/Bloodhound/Internal/: Aggregation.hs  Client.hs  Highlight.hs  Newtypes.hs  Query.hs  Sort.hs  StringlyTyped.hs  Suggest.hs
src/Database/V1/Bloodhound/Types/: Class.hs  Internal.hs
src/Database/V5/Bloodhound/: Client.hs  Types.hs
src/Database/V5/Bloodhound/Internal/: Aggregation.hs  Analysis.hs  Client.hs  Collapse.hs  Highlight.hs  Newtypes.hs  Query.hs  Sort.hs  StringlyTyped.hs  Suggest.hs
src/Database/V5/Bloodhound/Types/: Class.hs  Internal.hs
src/Database/V5/Bloodhound/Types/Internal/: Analysis.hs  Client.hs  Newtypes.hs  Query.hs  StringlyTyped.hs
tests/: Doctests.hs  doctests.hs  doctests.hsc  tests.hs
tests/ES5/: docker-compose.yml
tests/ES5/config/: elasticsearch.yml
tests/Test/: Aggregation.hs  AggregationSpec.hs  ApproxEq.hs  BulkAPI.hs  BulkAPISpec.hs  Common.hs  Count.hs  CountSpec.hs  Documents.hs  DocumentsSpec.hs  Generators.hs  Highlights.hs  HighlightsSpec.hs  Import.hs  Indices.hs  IndicesSpec.hs  JSON.hs  JSONSpec.hs  Nodes.hs  NodesSpec.hs  PointInTime.hs  PointInTimeSpec.hs  Query.hs  QuerySpec.hs  Reindex.hs  ReindexSpec.hs  ScanScroll.hs  ScanScrollSpec.hs  Script.hs  ScriptSpec.hs  SearchAfter.hs  SearchAfterSpec.hs  Snapshots.hs  SnapshotsSpec.hs  Sorting.hs  SortingSpec.hs  SourceFiltering.hs  SourceFilteringSpec.hs  Suggest.hs  SuggestSpec.hs  (+4 more)
tests/TestsUtils/: ApproxEq.hs  Common.hs  Generators.hs  Import.hs
tests/V1/: doctests.hs  tests.hs
tests/V1/Test/: Aggregation.hs  ApproxEq.hs  BulkAPI.hs  Common.hs  Documents.hs  Generators.hs  Import.hs  Indices.hs  JSON.hs  Query.hs  Snapshots.hs  Sorting.hs  Suggest.hs  Templates.hs
tests/V5/: doctests.hs  tests.hs
tests/V5/Test/: Aggregation.hs  BulkAPI.hs  Common.hs  Documents.hs  Generators.hs  Highlights.hs  Import.hs  Indices.hs  JSON.hs  Query.hs  Script.hs  Snapshots.hs  Sorting.hs  SourceFiltering.hs  Suggest.hs
