cabal-version: 1.12

name:           bloodhound
version:        0.22.0.0
synopsis:       Elasticsearch client library for Haskell
description:    Elasticsearch made awesome for Haskell hackers
category:       Database, Search
homepage:       https://github.com/bitemyapp/bloodhound.git#readme
bug-reports:    https://github.com/bitemyapp/bloodhound.git/issues
author:         Chris Allen
maintainer:     gautier.difolco@gmail.com
copyright:      2018 Chris Allen
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    changelog.md
tested-with: GHC==9.6.2, GHC==9.4.5, GHC==9.2.7, GHC==9.0.2, GHC==8.10.7


source-repository head
  type: git
  location: https://github.com/bitemyapp/bloodhound.git

library
  exposed-modules:
      Database.Bloodhound
      Database.Bloodhound.Client
      Database.Bloodhound.Requests
      Database.Bloodhound.Types
      Database.Bloodhound.Internal.Aggregation
      Database.Bloodhound.Internal.Analysis
      Database.Bloodhound.Internal.Client
      Database.Bloodhound.Internal.Highlight
      Database.Bloodhound.Internal.Newtypes
      Database.Bloodhound.Internal.Query
      Database.Bloodhound.Internal.Reindex
      Database.Bloodhound.Internal.Sort
      Database.Bloodhound.Internal.StringlyTyped
      Database.Bloodhound.Internal.Suggest
      Database.Bloodhound.Internal.Task
  other-modules:
      Bloodhound.Import
      Database.Bloodhound.Common.Script
      Database.Bloodhound.Internal.Client.BHRequest
      Database.Bloodhound.Internal.Client.Doc
      Database.Bloodhound.Internal.Count
      Database.Bloodhound.Internal.PointInTime
      Paths_bloodhound
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      aeson >=2.0
    , base >=4.14 && <5
    , blaze-builder
    , bytestring >=0.10.0
    , deriving-aeson >= 0.2.7
    , containers >=0.5.0.0
    , exceptions
    , hashable
    , http-client >=0.4.30
    , http-types >=0.8
    , mtl >=1.0
    , network-uri >=2.6
    , scientific >=0.3.0.0
    , template-haskell >=2.10 && <3
    , text >=0.11
    , time >=1.4
    , unordered-containers
    , vector >=0.10.9
    , versions >= 5.0.2
  default-language: Haskell2010

test-suite bloodhound-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Test.Aggregation
      Test.ApproxEq
      Test.BulkAPI
      Test.Common
      Test.Count
      Test.Documents
      Test.Generators
      Test.Highlights
      Test.Import
      Test.Indices
      Test.JSON
      Test.Nodes
      Test.PointInTime
      Test.Query
      Test.Reindex
      Test.ScanScroll
      Test.Script
      Test.SearchAfter
      Test.Snapshots
      Test.Sorting
      Test.SourceFiltering
      Test.Suggest
      Test.Templates
      Test.Types
      Paths_bloodhound
  hs-source-dirs:
      tests
  ghc-options: -Wall -fno-warn-orphans
  build-depends:
      QuickCheck
    , aeson >=2.0
    , aeson-optics
    , base
    , bloodhound
    , bytestring >=0.10.0
    , containers >=0.5.0.0
    , errors
    , exceptions
    , generic-random
    , hspec >=1.8
    , hspec-discover
    , http-client >=0.4.30
    , http-types >=0.8
    , microlens
    , mtl >=1.0
    , optics
    , pretty-simple
    , quickcheck-properties
    , temporary
    , text >=0.11
    , time >=1.4
    , unix-compat
    , vector >=0.10.9
    , versions >= 5.0.2
  default-language: Haskell2010
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
