cabal-version:  3.4

name:           bloodhound
version:        0.23.0.0
synopsis:       Elasticsearch client library for Haskell
description:    Elasticsearch made awesome for Haskell hackers
category:       Database, Search
homepage:       https://github.com/bitemyapp/bloodhound.git#readme
bug-reports:    https://github.com/bitemyapp/bloodhound.git/issues
author:         Chris Allen
maintainer:     gautier.difolco@gmail.com
copyright:      2018 Chris Allen
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-doc-files:
    README.md
    changelog.md
tested-with: GHC==9.6.2, GHC==9.4.5, GHC==9.2.7, GHC==9.0.2, GHC==8.10.7


source-repository head
  type: git
  location: https://github.com/bitemyapp/bloodhound.git

library
  exposed-modules:
      Database.Bloodhound
      Database.Bloodhound.Client
      Database.Bloodhound.Client.Cluster
      Database.Bloodhound.Requests
      Database.Bloodhound.Types
      Database.Bloodhound.Common.Client
      Database.Bloodhound.Common.Requests
      Database.Bloodhound.Common.Types
      Database.Bloodhound.ElasticSearch7.Client
      Database.Bloodhound.ElasticSearch7.Requests
      Database.Bloodhound.ElasticSearch7.Types
      Database.Bloodhound.OpenSearch1.Client
      Database.Bloodhound.OpenSearch1.Requests
      Database.Bloodhound.OpenSearch1.Types
      Database.Bloodhound.OpenSearch2.Client
      Database.Bloodhound.OpenSearch2.Requests
      Database.Bloodhound.OpenSearch2.Types
  other-modules:
      Database.Bloodhound.Internal.Client.BHRequest
      Database.Bloodhound.Internal.Client.Doc
      Database.Bloodhound.Internal.Utils.Requests
      Database.Bloodhound.Internal.Utils.Imports
      Database.Bloodhound.Internal.Utils.StringlyTyped
      Database.Bloodhound.Internal.Versions.Common.Types.Aggregation
      Database.Bloodhound.Internal.Versions.Common.Types.Analysis
      Database.Bloodhound.Internal.Versions.Common.Types.Bulk
      Database.Bloodhound.Internal.Versions.Common.Types.Count
      Database.Bloodhound.Internal.Versions.Common.Types.Highlight
      Database.Bloodhound.Internal.Versions.Common.Types.Indices
      Database.Bloodhound.Internal.Versions.Common.Types.Newtypes
      Database.Bloodhound.Internal.Versions.Common.Types.Nodes
      Database.Bloodhound.Internal.Versions.Common.Types.PointInTime
      Database.Bloodhound.Internal.Versions.Common.Types.Query
      Database.Bloodhound.Internal.Versions.Common.Types.Query.CommonTerms
      Database.Bloodhound.Internal.Versions.Common.Types.Query.Commons
      Database.Bloodhound.Internal.Versions.Common.Types.Query.Fuzzy
      Database.Bloodhound.Internal.Versions.Common.Types.Query.Match
      Database.Bloodhound.Internal.Versions.Common.Types.Query.MoreLikeThis
      Database.Bloodhound.Internal.Versions.Common.Types.Query.MoreLikeThisField
      Database.Bloodhound.Internal.Versions.Common.Types.Query.Prefix
      Database.Bloodhound.Internal.Versions.Common.Types.Query.QueryString
      Database.Bloodhound.Internal.Versions.Common.Types.Query.Range
      Database.Bloodhound.Internal.Versions.Common.Types.Query.Regexp
      Database.Bloodhound.Internal.Versions.Common.Types.Query.SimpleQueryString
      Database.Bloodhound.Internal.Versions.Common.Types.Query.Wildcard
      Database.Bloodhound.Internal.Versions.Common.Types.Reindex
      Database.Bloodhound.Internal.Versions.Common.Types.Script
      Database.Bloodhound.Internal.Versions.Common.Types.Search
      Database.Bloodhound.Internal.Versions.Common.Types.Snapshots
      Database.Bloodhound.Internal.Versions.Common.Types.Sort
      Database.Bloodhound.Internal.Versions.Common.Types.Suggest
      Database.Bloodhound.Internal.Versions.Common.Types.Task
      Database.Bloodhound.Internal.Versions.Common.Types.Units
      Database.Bloodhound.Internal.Versions.ElasticSearch7.Types.PointInTime
      Database.Bloodhound.Internal.Versions.OpenSearch2.Types.PointInTime
      Paths_bloodhound
  autogen-modules:
      Paths_bloodhound
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      aeson >=2.0 && <3
    , base >=4.14 && <5
    , blaze-builder >= 0.1 && <1
    , bytestring >=0.10.0 && <1
    , containers >=0.5.0.0 && <1
    , exceptions >=0.1 && <1
    , hashable >=1 && <2
    , http-client >=0.4.30 && <1
    , http-types >=0.8 && <1
    , mtl >=1.0 && <3
    , network-uri >=2.6 && <3
    , optics-core >=0.4 && <0.5
    , scientific >=0.3.0.0 && <1
    , template-haskell >=2.10 && <3
    , text >=0.11 && <3
    , time >=1.4 && <2
    , unordered-containers >=0.1 && <1
    , vector >=0.10.9 && <1
    , versions >= 5.0.2 && <7
  default-language: Haskell2010
  default-extensions:
      DataKinds
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      GeneralizedNewtypeDeriving
      KindSignatures
      TypeApplications

test-suite bloodhound-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Test.AggregationSpec
      Test.BulkAPISpec
      Test.CountSpec
      Test.DocumentsSpec
      Test.HighlightsSpec
      Test.IndicesSpec
      Test.JSONSpec
      Test.NodesSpec
      Test.PointInTimeSpec
      Test.QuerySpec
      Test.ReindexSpec
      Test.ScanScrollSpec
      Test.ScriptSpec
      Test.SearchAfterSpec
      Test.SnapshotsSpec
      Test.SortingSpec
      Test.SourceFilteringSpec
      Test.SuggestSpec
      Test.TemplatesSpec
      Test.TypesSpec
      TestsUtils.ApproxEq
      TestsUtils.Common
      TestsUtils.Generators
      TestsUtils.Import
      Paths_bloodhound
  hs-source-dirs:
      tests
  ghc-options: -Wall -fno-warn-orphans
  build-depends:
      QuickCheck
    , aeson >=2.0
    , aeson-optics
    , base
    , bloodhound
    , bytestring >=0.10.0
    , containers >=0.5.0.0
    , errors
    , exceptions
    , generic-random
    , hspec >=1.8
    , hspec-discover
    , http-client >=0.4.30
    , http-types >=0.8
    , microlens
    , mtl >=1.0
    , optics
    , pretty-simple
    , quickcheck-properties
    , temporary
    , text >=0.11
    , time >=1.4
    , unix-compat
    , vector >=0.10.9
    , versions >= 5.0.2
  default-language: Haskell2010
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Doctests.hs
  ghc-options:      -threaded
  build-depends: 
      aeson
    , base
    , bloodhound
    , doctest >= 0.8
    , text
